# VoxelFrame_CppClient

./: .gitmodules  CMakeLists.txt  README.md  imgui.ini  workspace.code-workspace  xmake.lua
.github/workflows/: main.yml
guidance/: design.md
resource/Shader/: shader.vs
src/: app.cpp  app.h  base.h  main.cpp
src/Models/: Chunk.cpp  Chunk.h  ChunkMap.cpp  ChunkMap.h  WindowInfoModel.cpp  WindowInfoModel.h
src/Models/Datadef/: data.h
src/Systems/: DrawSys.cpp  DrawSys.h  InputSys.h
src/Systems/CalcSys/: CalcSys.h  CalcWindowInfo.cpp
src/Systems/CalcSysParts/: CalcWindowInfo.cpp
src/Systems/DrawSys/: DrawSys.h  DrawSysMain.cpp  DrawWindowInfo.cpp
src/Systems/DrawSys/GuiSys/: GuiSys.h  GuiSysMain.cpp
src/Systems/DrawSys/MapDraw/: MapDraw.cpp  Mapdraw.h
src/Systems/DrawSys/MapDrawer/: Camera.cpp  Camera.h  MapDrawer.cpp  MapDrawer.h  MeshBuilder.cpp  MeshBuilder.h
src/Systems/DrawSys/Shader/: Shader.vs
src/Systems/DrawSysParts/: DrawSysMain.cpp  DrawWindowInfo.cpp  interface.h
src/Systems/DrawSysParts/GuiSys/: GuiSys.h  GuiSysMain.cpp
src/Systems/DrawSysParts/InterfaceParts/: Interface.cpp
src/Systems/NetSys/: NetSys.cpp  NetSys.h  RecStatRecoder.cpp  RecStatRecorder.h
src/game/: Chunk.cpp  Chunk.h  ChunkMap.cpp  ChunkMap.h  block.h  chunk.cpp  chunk.h  game.h
src/graph/: Camera.cpp  Camera.h  MapDrawer.cpp  MapDrawer.h  Mesh.cpp  Mesh.h  Shader.h  _Graph.cpp  _Graph.h
src/graph/gui/: _gui.cpp
src/impl/Protos/: test.proto
src/impl/Protos/src/: bababa.pb.cc  bababa.pb.h
src/io/: Input.cpp  Input.h  InputSys.cpp
src/net/: NetSys.cpp
